z-index:999 fixes everything

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -93,6 +93,7 @@ header {
 
 .homepage-navbar {
     margin-bottom: -40px;
+    z-index: 999;
     .navbar-nav {
         margin: 0;
     }
